--- a/data.ipynb
+++ b/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -3023,7 +3023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -3034,13 +3034,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
       "No faces detected\n",
       "No faces detected\n",
       "No faces detected\n",
@@ -3390,15 +3502,79 @@
      ]
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n",
+      "No faces detected\n"
+     ]
+    },
+    {
      "ename": "KeyboardInterrupt",
      "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-8be895aee539>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mfilename\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mendswith\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimage_ends\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[0mfilepath\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"data/linus_frames\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m         \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcut_head\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilepath\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"data/linus_faces\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m128\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m128\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-5-8be895aee539>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mfilename\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mendswith\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimage_ends\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[0mfilepath\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"data/linus_frames\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m         \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcut_head\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilepath\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"data/linus_faces\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m128\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m128\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;32m~\\Projects\\Calhacks\\FaceTransfer\\data.py\u001b[0m in \u001b[0;36mcut_head\u001b[1;34m(image_path, out_dir, resolution)\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mcut_head\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimage_path\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mout_dir\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mresolution\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m64\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m64\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m     \u001b[0mimage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmisc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimage_path\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 20\u001b[1;33m     \u001b[0mbb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0malign\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetLargestFaceBoundingBox\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mskipMulti\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mbb\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Anaconda\\envs\\PYT\\lib\\site-packages\\openface\\align_dlib.py\u001b[0m in \u001b[0;36mgetLargestFaceBoundingBox\u001b[1;34m(self, rgbImg, skipMulti)\u001b[0m\n\u001b[0;32m    121\u001b[0m         \u001b[1;32massert\u001b[0m \u001b[0mrgbImg\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    122\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 123\u001b[1;33m         \u001b[0mfaces\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetAllFaceBoundingBoxes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrgbImg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    124\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;32mnot\u001b[0m \u001b[0mskipMulti\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfaces\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfaces\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    125\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfaces\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mlambda\u001b[0m \u001b[0mrect\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mrect\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwidth\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mrect\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mheight\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Anaconda\\envs\\pYT\\lib\\site-packages\\openface\\align_dlib.py\u001b[0m in \u001b[0;36mgetLargestFaceBoundingBox\u001b[1;34m(self, rgbImg, skipMulti)\u001b[0m\n\u001b[0;32m    121\u001b[0m         \u001b[1;32massert\u001b[0m \u001b[0mrgbImg\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    122\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 123\u001b[1;33m         \u001b[0mfaces\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetAllFaceBoundingBoxes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrgbImg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    124\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;32mnot\u001b[0m \u001b[0mskipMulti\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfaces\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfaces\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    125\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfaces\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mlambda\u001b[0m \u001b[0mrect\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mrect\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwidth\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mrect\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mheight\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -3748,7 +3924,9 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nithin = pil_loader(\"nithin.png\")\n",
@@ -3759,7 +3937,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -3789,7 +3969,9 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "i = net.sample(nithin)"
